homework/7.advanced-abstractions/prometheus/prometheus_service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus
